--- a/HTML/Página teste/index.html
+++ b/HTML/Página teste/index.html
@@ -9,18 +9,59 @@
 <body>
     <!-- Isto é um comentário (ctrl+~) -->
     <h1>O meu título</h1>
+    <hr>
+
     <h2>O meu título 2</h2>
     <h3>O meu título 3</h3>
     <h4>O meu título 4</h4>
     <h5>O meu título 5</h5>
-    <!-- Lorem500+tab gera 500 letras em latim -->
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet fugiat dicta incidunt ut possimus eveniet ipsa ad dolore dolorum magnam vitae repellat nisi aperiam voluptatem, consequatur porro molestias cumque laudantium nostrum rerum? Fuga, aspernatur? Reprehenderit velit porro ad? Eius, alias, veniam iste laudantium cumque facilis nisi unde architecto aspernatur consequuntur dicta tempora. Laborum consequuntur nobis, nisi debitis tenetur sequi, esse earum ab reprehenderit quisquam hic quidem odit repudiandae, minima voluptates! Possimus, odio explicabo dolorem qui ullam dolore est! Ducimus numquam ab eveniet non commodi dolorem eum dolor voluptates laboriosam aliquam officia ratione quo ipsam voluptatibus amet nesciunt consequuntur quaerat consequatur fugit perspiciatis voluptas, velit incidunt earum rem! Aspernatur obcaecati ducimus quos natus ullam in quam, ea asperiores repudiandae saepe. Incidunt mollitia eius voluptatibus, quia suscipit a, inventore maiores excepturi error eum sed molestiae ab perferendis. Vitae, corporis dignissimos nam sit, perspiciatis voluptatem quidem fugit nisi hic et tenetur. Adipisci commodi, illum dolores necessitatibus excepturi eius repellat laboriosam possimus consequuntur, magni similique veritatis optio, doloribus consectetur maxime. Ipsum, id. Illo rem repudiandae illum unde tenetur quaerat dolores eligendi nemo repellat accusamus deleniti ullam commodi, sequi sunt blanditiis perferendis et dignissimos veritatis esse magnam corporis omnis. Nulla ratione hic magni rem? Iusto maxime eligendi consectetur totam. In voluptas atque magni unde quas, corporis praesentium maiores quia repudiandae exercitationem iste est quod ullam! Rerum distinctio totam perspiciatis enim neque, obcaecati nemo voluptatibus dolore sit officiis, voluptas repudiandae pariatur consequatur. Ab culpa soluta placeat, illo consectetur officia, quo qui porro ut aliquid omnis harum esse explicabo ducimus eveniet illum voluptates beatae error quos non? Ipsam odio facere ducimus molestiae nobis odit molestias eligendi amet, dignissimos voluptates nostrum. Ea sunt cumque quas ad tempore maxime optio rem quidem illo facere. Fuga veritatis perspiciatis quasi enim minima, corrupti maxime in recusandae est pariatur repudiandae quod vel distinctio rem sequi iure perferendis? Veniam error consequuntur ipsa tempora, praesentium autem, beatae ut cumque blanditiis non cum voluptates sed ex saepe porro at doloremque quos eius sint. Voluptatem quod eius excepturi quis explicabo officia sequi unde a, aliquid consequatur quasi atque? Assumenda, nesciunt. Cum obcaecati atque doloribus ab rem ea amet soluta praesentium animi qui voluptatum, dignissimos optio molestiae perspiciatis temporibus adipisci est, minus quidem debitis laborum architecto tempora, nihil dicta voluptate? Libero error nihil, sunt mollitia voluptates beatae unde optio ex possimus amet non? Porro commodi iusto numquam voluptatibus harum quo. Cum in, voluptatem consequuntur quae adipisci doloribus corrupti quaerat quos vel totam rem vero tenetur itaque. Dolorem soluta cumque nemo dicta non dolores esse magni, officiis, accusantium a tempore quia ut? Accusantium molestiae necessitatibus quaerat maxime odio dolor, nihil corrupti cum enim laboriosam sunt nulla dolorem fuga nisi veritatis perspiciatis praesentium velit alias esse ipsum quod odit repellat. Illum fugit officia ipsa numquam necessitatibus, accusantium molestiae id odio officiis debitis, dignissimos distinctio totam. Sunt veritatis laudantium nam error est placeat nisi provident eveniet saepe doloribus sit tempore vel, blanditiis quae eligendi labore fugit. Officia eum debitis dolorem, sapiente eos laboriosam libero repudiandae laudantium quos iusto delectus doloremque?</p>
+    <!-- Lorem500+tab gera 500 palavras em latim -->
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet fugiat dicta incidunt ut possimus eveniet ipsa ad <br> dolorum magnam vitae repellat nisi aperiam voluptatem, consequatur porro molestias cumque laudantium nostrum rerum? Fuga, aspernatur? Reprehenderit velit porro ad? Eius, alias, veniam iste laudantium cumque facilis nisi unde architecto aspernatur consequuntur dicta tempora. Laborum consequuntur nobis, nisi debitis tenetur sequi, esse earum ab reprehenderit quisquam hic quidem odit repudiandae, minima voluptates! Possimus, odio explicabo dolorem qui ullam dolore est! Ducimus numquam ab eveniet non commodi dolorem eum dolor voluptates laboriosam aliquam officia ratione quo ipsam voluptatibus amet nesciunt consequuntur quaerat consequatur fugit perspiciatis voluptas, velit incidunt earum rem! Aspernatur obcaecati ducimus quos natus ullam in quam, ea asperiores repudiandae saepe. Incidunt mollitia eius voluptatibus, quia suscipit a, inventore maiores excepturi error eum sed molestiae ab perferendis. Vitae, corporis dignissimos nam sit, perspiciatis voluptatem quidem fugit nisi hic et tenetur. Adipisci commodi, illum dolores necessitatibus excepturi eius repellat laboriosam possimus consequuntur, magni similique veritatis optio, doloribus consectetur maxime. Ipsum, id. Illo rem repudiandae illum unde tenetur quaerat dolores eligendi nemo repellat accusamus deleniti ullam commodi, sequi sunt blanditiis perferendis et dignissimos veritatis esse magnam corporis omnis. Nulla ratione hic magni rem? Iusto maxime eligendi consectetur totam. In voluptas atque magni unde quas, corporis praesentium maiores quia repudiandae exercitationem iste est quod ullam! Rerum distinctio totam perspiciatis enim neque, obcaecati nemo voluptatibus dolore sit officiis, voluptas repudiandae pariatur consequatur. Ab culpa soluta placeat, illo consectetur officia, quo qui porro ut aliquid omnis harum esse explicabo ducimus eveniet illum voluptates beatae error quos non? Ipsam odio facere ducimus molestiae nobis odit molestias eligendi amet, dignissimos voluptates nostrum. Ea sunt cumque quas ad tempore maxime optio rem quidem illo facere. Fuga veritatis perspiciatis quasi enim minima, corrupti maxime in recusandae est pariatur repudiandae quod vel distinctio rem sequi iure perferendis? Veniam error consequuntur ipsa tempora, praesentium autem, beatae ut cumque blanditiis non cum voluptates sed ex saepe porro at doloremque quos eius sint. Voluptatem quod eius excepturi quis explicabo officia sequi unde a, aliquid consequatur quasi atque? Assumenda, nesciunt. Cum obcaecati atque doloribus ab rem ea amet soluta praesentium animi qui voluptatum, dignissimos optio molestiae perspiciatis temporibus adipisci est, minus quidem debitis laborum architecto tempora, nihil dicta voluptate? Libero error nihil, sunt mollitia voluptates beatae unde optio ex possimus amet non? Porro commodi iusto numquam voluptatibus harum quo. Cum in, voluptatem consequuntur quae adipisci doloribus corrupti quaerat quos vel totam rem vero tenetur itaque. Dolorem soluta cumque nemo dicta non dolores esse magni, officiis, accusantium a tempore quia ut? Accusantium molestiae necessitatibus quaerat maxime odio dolor, nihil corrupti cum enim laboriosam sunt nulla dolorem fuga nisi veritatis perspiciatis praesentium velit alias esse ipsum quod odit repellat. Illum fugit officia ipsa numquam necessitatibus, accusantium molestiae id odio officiis debitis, dignissimos distinctio totam. Sunt veritatis laudantium nam error est placeat nisi provident eveniet saepe doloribus sit tempore vel, blanditiis quae eligendi labore fugit. Officia eum debitis dolorem, sapiente eos laboriosam libero repudiandae laudantium quos iusto delectus doloremque?</p>
     <!-- Span permite criar texto in line -->
     <span>ola</span>
     <span>mundo</span>
     <span>!</span>
     <!-- introdução de imagem -->
+    <h5></h5>
     <img src="gelado_de_baunilha.jpg" alt="Gelado de Baunilha">
-    
+    <h5></h5>
+    <!-- a = anchor tag = link hiperlink -->
+    <a target="_blank"href="http://www.google.com">Click here to know more</a>
+    <!-- alt+z coloca todo o texto extenso em texto corrido no editor -->
+    <table>
+
+<tr>
+    <th>Primeiro nome</th>
+    <th>Ultimo nome</th>
+    <th>Idade</th>
+</tr>
+<tr>
+    <td>Igor</td>
+    <td>Lima</td>
+    <td>99</td>
+</tr>
+<tr>
+    <td>Joao</td>
+    <td>Lima</td>
+    <td>33 anos</td>
+</tr>
+<tr>
+    <td>Ricardo</td>
+    <td>Pinto</td>
+    <td>56 anos</td>
+</tr>
+<!-- para multiplicar itens com atalho podemos usar * 10 por exemplo -->
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+
+    </table>
 </body>
 </html>
