--- a/HTML/Novo Projeto/index.html
+++ b/HTML/Novo Projeto/index.html
@@ -5,21 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Teste 2</title>
 </head>
 <body>
-    <h1>Título 1</h1>
-    <h2>Título 2</h2>
-    <h3>Título 3</h3>
+    <h1>Titulo 1</h1>
+    <h2>Titulo 2</h2>
+    <h1>Titulo 3</h1>
     <p>Este é o meu paragrafo</p>
-    <p>Este é o meu paragrafo</p>
-    <p class="proxo fontemaior">Este é o meu paragrafo</p>
-    <p class="proxo">Este é o meu paragrafo</p>
-    <p class="proxo">Este é o meu paragrafo</p>
-    <p class="proxo"id="fonte">fonte maior</p>
-    <p class="proxo">Este é o meu paragrafo</p>
-    <p class="proxo">Este é o meu paragrafo</p>
-    <p class="proxo">Este é o meu paragrafo</p>
-    <p class="proxo">Este é o meu paragrafo</p>
+    <p>Segundo paragrafo</p>
+    <p class="proxo fontemaior">Terceiro Paragrafo</p>
+    <p class="proxo">Quarto Paragrafo</p>
+    <p class="proxo">Terceiro Paragrafo</p>
+    <p class="proxo" id="bfont">Fonte maior</p>
+    <p class="proxo">Terceiro Paragrafo</p>
+    <p class="proxo">Quarto Paragrafo</p>
+    <p class="proxo">Terceiro Paragrafo</p>
+    <p class="proxo">Quarto Paragrafo</p>
+    
+    <img src="" alt="">
+    <video src=""></video>
+    <div class="contentor">
+        <img src="puppy2.jpg" alt="Imagem de um carrocho">
+        <button>Ver mais</button> 
+    </div>
+
 </body>
 </html>
